--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "october/backend": "~1.0",
         "october/cms": "~1.0",
         "laravel/framework": "5.5.*",
-        "wikimedia/composer-merge-plugin": "dev-master"
+        "wikimedia/composer-merge-plugin": "dev-master",
+        "laravel/scout": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
