--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,11 @@
         "phpunit/phpunit": "~5.7",
         "phpunit/phpunit-selenium": "~1.2"
     },
+    "autoload": {
+      "classmap": [
+          "CustomBlogSearchProvider.php"
+      ]
+    },
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php",
